--- a/portainer-docker-compose.yml
+++ b/portainer-docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /home/debian/portainer_data:/data
+      - $HOME/portainer_data:/data
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.portainer.rule=Host(`portainer.$MY_DOMAIN`)"
